hphp/test/zend/good/ext/mbstring/tests/mb_ereg_replace-compat-01.php
<?php
/* (counterpart: ext/standard/tests/reg/001.phpt) */
  $a="abc123";
  echo mb_ereg_replace("123","def",$a);
?>